--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,6 @@ anyhow = "1.0"
 itertools = "0.11"
 tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
 url = "2.3"
+log = "0.4"
+env_logger = "0.10"
+thiserror = "1.0"
